resume footer added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     <ul>
         <li><a href="./hobbies.html">My Hobbies</a></li>
         <li><a href="./contact.html">Contact Me</a></li>
-    </ul>
+    </ul><hr>
+    <footer>&copy;2023 Vinaya_G</footer>
 </body>
 </body>
 
